test/corpus/advanced.txt
================================================================================
resource with name
================================================================================

-r assets/image.png@my_image
--resource data.txt@config

---

(hxml
  (section
    (resource
      (file)
      (resource_name))
    (resource
      (file)
      (resource_name))))

================================================================================
server addresses
================================================================================

--server-listen stdio
--server-listen localhost:8080

---

(hxml
  (section
    (server_listen
      (server_address))
    (server_listen
      (server_address))))

================================================================================
custom target
================================================================================

--custom-target neko
--custom-target cs=out

---

(hxml
  (section
    (target
      (custom_target))
    (target
      (custom_target))))

================================================================================
run with arguments
================================================================================

--run my.App arg1 arg2

---

(hxml
  (section
    (run
      (type_path
        (package
          (identifier))
        type: (type_name))
      (argument)
      (argument))))

================================================================================
dce modes
================================================================================

--dce std
--dce full
--dce no

---

(hxml
  (section
    (dce
      (dce_mode))
    (dce
      (dce_mode))
    (dce
      (dce_mode))))
