test/corpus/library.txt
=======
library
=======

--library heaps
-L mylib

---

(hxml
  (section
    (library
      (name))
    (library
      (name))))

====================
library with version
====================

--library heaps:1.2.3
-L mylib:dev-branch

---

(hxml
  (section
    (library
      (name)
      (version))
    (library
      (name)
      (version))))
