test/corpus/macro.txt
============================
macro with quoted expression
============================

--macro 'some.thing.Any.test()'

---

(hxml
  (section
    (macro (expr))))

==============================
macro with unquoted expression
==============================

--macro some.thing.Any.test()

---

(hxml
  (section
    (macro (expr))))

===============================
macro expression with arguments
===============================

--macro include('some.pack', true)

---

(hxml
  (section
    (macro (expr))))
